--- a/CarLibrary/CarLibrary/CarLibrary.csproj
+++ b/CarLibrary/CarLibrary/CarLibrary.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
 	  <UseWindowsForms>true</UseWindowsForms>
+	  <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
